package com.andrei.evot.callbacks;

import android.widget.CheckBox;

import java.util.ArrayList;

public interface DisableCheckboxesCB {
    public void disable(ArrayList<CheckBox> checkBoxArrayList);
}
