package com.andrei.evot.callbacks;

public interface VoteCallback {
    public void onResult();
}
