package model;

public class User {
    public static String mCnp;
    public static String mPassword;
    public static String mIdElection = "";
}